Add Kalman filters document
Add Kalman filters to document the approach we hope to take for MKS
time series.

--- a/notebooks/TimeSeriesAnalysis.ipynb
+++ b/notebooks/TimeSeriesAnalysis.ipynb
@@ -104,23 +104,16 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The first plot above shows a plot of force over a function of time, and the second plot shows the position and its first and second differences as a function of time. Both the position and force are stationary processes. We can now use the Yule-Walker (YW) equation to look at the cross correlation between between the two signals.\n",
+      "The first plot above shows a plot of force over a function of time, and the second plot shows the position and its first and second differences as a function of time. Both the position and force are stationary processes. Dynamic regression to determine the coefficents $a_1$, $a_2$, $b_0$ and $b_1$.\n",
       "\n",
-      "With a specificed number of coefficients (in our case $a_1$, $a_2$, $b_0$ and $b_1$) we can use the YW equation. To derive the YW equation we first look at the covarnce \n",
+      "Dynamic regression shows the\n",
       "\n",
-      "$$ y_t = a_1 y_{t-1} + a_2 y_{t-2} + b_0 F_t  + b_1 F_{t - 1} $$\n",
+      "$$ y_2 = a_1 y_1 + a_2 y_0 + b_0 F_2 + b_1 F_1 $$\n",
+      "$$ y_3 = a_1 y_2 + a_2 y_1 + b_0 F_3 + b_1 F_2 $$\n",
+      "...\n",
+      "$$ y_t = a_1 y_{t-1} + a_2 y_{t-2} + b_0 F_t + b_1 F_{t-1} $$\n",
       "\n",
-      "Now take a look at the covarience $\\gamma$ of each of the terms with the position at a given difference in time $y_{t-h}$  \n",
-      "\n",
-      "$$ Cov(y_{t},y_{t-h}) = a_1 Cov(y_{t-1},y_{t-h}) + b_0 Cov(F_t,y_{t-h} + b_1 Cov(F_{t-1},y_{t-h})  $$\n",
-      "\n",
-      "$$ \\gamma(h)_{yy} = a_1 \\gamma(h-1)_{yy} + b_0 \\gamma(h)_{yx} + b_1 \\gamma(h-1)_{yx} $$\n",
-      "\n",
-      "If we normalize the equation above by the varience of $y_t$ ($\\gamma(0)_{yy}$) \n",
-      "\n",
-      "$$ \\rho (h) = \\frac{\\gamma(h)}{\\gamma(0)}$$\n",
-      "\n",
-      "$$ \\rho(h)_{yy} = a_1 \\rho(h+1)_{yy} + b_0 \\rho(h)_{yx} + b_1 \\rho(h+1)_{yx} $$\n"
+      "\n"
      ]
     },
     {
