--- a/notebooks/07 - Time MKS for Cahn-Hillard Models.ipynb
+++ b/notebooks/07 - Time MKS for Cahn-Hillard Models.ipynb
@@ -11,54 +11,35 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#Time MKS\n",
-      "\n",
-      "##MKS for the Diffusion Equation\n",
-      "\n",
-      "Let's first assume that we are looking at a function $c(x,t)$ represents the concentration of a phase of interest at location $x$ and and time $t$. This concentration can be set equal to a linear combination of an average concentration $\\bar{c}$ (also known as the reference medium) and a local perturbation from that average concentration $c'(x,t)$ at location $x$ and time $t$ as shown below.\n",
-      "\n",
-      "$$ c(x,t) = \\bar{c} + c'(x,t) $$\n",
-      "\n",
-      "The local perturbation can be related to the average concentration using a localization tensor $a(x,t)$.\n",
-      "\n",
-      "$$ c'(x,t) = a(x,t)\\bar{c} $$\n",
-      "\n",
-      "The Cahn-Hilliard equation has the following form. \n",
-      "\n",
-      "$$ \\frac{\\partial c(x,t)}{\\partial t} = \\nabla \\cdot [D(c,x) \\nabla c(x,t))] $$\n",
-      "\n",
-      "Substituting in the concentration in terms of the average concentration and the local pertiubation, we get the following equation.\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
       "##MKS for The Cahn-Hilliard Equation\n",
       "\n",
-      "Let's first assume that we are looking at a function $c(x,t)$ represents the concentration of a phase of interest at location $x$ and and time $t$. This concentration can be set equal to a linear combination of an average concentration $\\bar{c}$ (also known as the reference medium) and a local perturbation from that average concentration $c'(x,t)$ at location $x$ and time $t$as shown below.\n",
+      "####Reference Medium \n",
+      "\n",
+      "Let's first assume that we are looking at a function $c(x,t)$ that represents the concentration of a phase of interest at location $x$ and and time $t$. This concentration can be set equal to a linear combination of an average concentration $\\bar{c}$ (also known as the reference medium) and a local perturbation from that average concentration $c'(x,t)$ at location $x$ and time $t$ as shown below.\n",
       "\n",
       "$$ c(x,t) = \\bar{c} + c'(x,t) $$\n",
       "\n",
-      "The local perturbation can be related to the average concentration using a localization tensor $a(x,t)$.\n",
+      "The local perturbation can be related to the average concentration using a localization value $a(x,t)$.\n",
       "\n",
       "$$ c'(x,t) = a(x,t)\\bar{c} $$\n",
+      "\n",
+      "####Cahn-Hilliard Equation \n",
       "\n",
       "The Cahn-Hilliard equation has the following form. \n",
       "\n",
       "$$ \\frac{\\partial c(x,t)}{\\partial t} = \\nabla^2 D \\Big(\\frac{df(c(x,t))}{dc}-\\nabla^2 \\gamma c(x,t) \\Big) $$\n",
       "\n",
-      "Where  $D$ is the diffusion coefficient, $f(c(x,t))$ is the free energy function, and $\\sqrt{\\gamma}$ is the  length of interface region. $f(c(x))$ is a double well potential and can be represented as a fourth-order polynomial\n",
+      "Where  $D$ is the diffusion coefficient, $f(c(x,t))$ is the free energy function, and $\\sqrt{\\gamma}$ is the  length of interface region. $f(c(x))$ is a double well potential and can be represented as a fourth-order polynomial.\n",
       "\n",
       "$$ f(c(x,t)) = 4F(c(x,t)^2 - 1)^2 $$\n",
       "\n",
-      "where F is the magnitude of the energy barrier. By subtituting the fourth-order polynomial in for the free enegy function and assuming that $D$, $\\gamma$ and $F$ are constants in space, the Cahn-Hillard equation takes the following form.\n",
+      "where $F$ is the magnitude of the energy barrier. By substituting the fourth-order polynomial in for the free energy function and assuming that $D$, $\\gamma$ and $F$ are constants, the Cahn-Hilliard equation takes the following form.\n",
       "\n",
       "$$ \\frac{\\partial c(x,t)}{\\partial t} = D\\nabla^2 \\Big(16 F \\big(c(x,t)^3-c(x,t)\\big)-\\gamma \\nabla^2 c(x,t) \\Big) $$\n",
       "\n",
-      "Subtiting in the concentration in terms of the average concentration and the local perturbation we get the following equation.\n",
+      "####Reference Medium in Cahn-Hilliard Equation\n",
+      "\n",
+      "Substituting in the concentration in terms of the average concentration and the local perturbation we get the following equation.\n",
       "\n",
       "$$ \\frac{\\partial (\\bar{c} + c'(x,t))}{\\partial t} = D\\nabla^2 \\Big(16 F \\big((\\bar{c} + c'(x,t))^3-(\\bar{c} + c'(x,t))\\big)-\\gamma\\nabla^2  (\\bar{c} + c'(x,t)) \\Big) $$\n",
       "\n",
@@ -71,34 +52,75 @@
       "\n",
       "$$ \\frac{\\partial c'(x,t)}{\\partial t} = D\\Big(16 F [3\\bar{c}^2\\nabla^2c'(x,t) +3\\bar{c}\\nabla^2c'(x,t)^2  + \\nabla^2 c'(x,t)^3- \\nabla^2 c'(x,t)]-\\gamma\\nabla^4c'(x,t) \\Big) $$\n",
       "\n",
-      "This can be rearranged to looks like the nonhomogenous diffusion equation\n",
+      "This can be rearranged to looks like the nonhomogeneous Cahn-Hilliard equation.\n",
       "\n",
-      "$$ \\frac{\\partial c'(x,t)}{\\partial t}  - \\tilde{D} \\nabla^2c'(x,t) = f(x,t) $$\n",
+      "$$ \\frac{\\partial c'(x,t)}{\\partial t} - \\tilde D \\nabla^2 \\Big (c'(x,t)^3- c'(x,t)-\\tilde{\\gamma} \\nabla^4c'(x,t) \\Big) = f(x,t) $$\n",
       "\n",
       "where\n",
       "\n",
-      "$$ \\tilde{D} = 48 F D\\bar{c}^2 $$\n",
+      "$$ f(x,t) = 3 \\tilde D \\nabla^2 \\Big ( \\bar{c}^2c'(x,t) + \\bar{c} c'(x,t)^2 \\Big) $$\n",
       "\n",
       "and\n",
       "\n",
-      "$$ f(x,t) = D\\Big(16 F [3\\bar{c}\\nabla^2c'(x,t)^2 + \\nabla^2 c'(x,t)^3)- \\nabla^2 c'(x,t)]-\\gamma\\nabla^4c'(x,t) \\Big) $$\n",
+      "$$ \\tilde D =  16 F D $$ \n",
+      "\n",
+      "$$ \\tilde \\gamma = \\frac{\\gamma}{16 F} $$\n",
+      "\n",
+      "####Green's Functions and Materials Knowledge System\n",
+      "\n",
+      "The solution to the equation above can be found in terms of a green's function. The general solution for the concentration $c(x,t)$ has the following form.\n",
+      "\n",
+      "$$ c'(x,t) = \\int_{V} \\ G(x-x',t) c'(x',0)dx' + \\int_{V} \\int_0^t G(x-x',t-t') f(x',t') dt' dx' $$\n",
+      "\n",
+      "$$ c'(x,t) = \\int_{V} \\ G(x-x',t) c'(x',0)dx' + 3 \\tilde D \\int_{V} \\int_0^t G(x-x',t-t')  \\nabla^2 \\Big ( \\bar{c}^2 c'(x',t') + \\bar{c} c'(x',t')^2 \\Big) dt' dx' $$\n",
+      "\n",
+      "\n",
+      "The first term on the RHS of the equation is the homogenous solution to the equation and the second term is the particular solution. If we assume periodic boundary conditions and integrate by parts twice on the last term, we can get the following expression.\n",
+      "\n",
+      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + 3 \\tilde D \\int_{V} \\int_0^t \\nabla^2 G(r,\\tau) \\Big ( \\bar{c}^2 c'(x-r,t-\\tau) + \\bar{c} c'(x-r,t-\\tau)^2 \\Big) d\\tau dr $$\n",
+      "\n",
+      "where\n",
+      "\n",
+      "$$r = x-x' $$\n",
+      "\n",
+      "$$\\tau = t-t' $$\n",
       "\n",
       "\n",
       "\n",
-      "The solution to the equation above can be found in terms of a green's function. The green's equation for the diffusion equation is free space can be found below.\n",
-      "\n",
-      "$$ G(x,s,t) = \\frac{1}{\\sqrt{4 \\pi k t}} exp{\\Big(\\frac{(x-s)^2}{4kt}\\Big)} $$\n",
-      "\n",
-      "The general solution for the concentration $c(x,t)$ has the following form.\n",
-      "\n",
-      "$$ c'(x,t) = \\int_{-\\infty}^\\infty \\ \\frac{1}{\\sqrt{4 \\pi k t}} exp{ \\Big(\\frac{(x-s)^2}{4kt} \\Big)} c'(s,0)ds + \\int_{-\\infty}^\\infty \\int_0^t \\frac{1}{\\sqrt{4 \\pi k (t-\\tau)}} exp{\\Big(\\frac{(x-s)^2}{4k(t-\\tau)}\\Big)} f(s,\\tau) d\\tau dx $$\n",
-      "\n",
-      "$$ c'(x,t) = \\int_{-\\infty}^\\infty \\ G(x,s,t) c'(s,0)ds + \\int_{-\\infty}^\\infty \\int_0^t G(x,s,(t-\\tau) f(s,\\tau) d\\tau dx $$\n",
-      "\n",
-      "$$ c'(x,t) = \\int_{-\\infty}^\\infty \\ G(x,s,t) c'(s,0)ds + \\int_{-\\infty}^\\infty \\int_0^t G(x,s,(t-\\tau) D\\Big(16 F [3\\bar{c}\\nabla^2c'(s,\\tau)^2 + \\nabla^2 c'(s,\\tau)^3)- \\nabla^2 c'(s,\\tau)]-\\gamma\\nabla^4c'(s,\\tau) \\Big) d\\tau dx $$\n",
+      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + 3 \\tilde D \\int_{V} \\int_0^t \\nabla^2 G(r,\\tau) \\bar{c}^2 c'(x-r,t-\\tau)d\\tau dr  + 3 \\tilde D \\int_{V} \\int_0^T \\nabla^2 G(r,\\tau)\\bar{c} c'(x-r,t-\\tau)^2 d\\tau dr $$\n",
       "\n",
       "\n",
-      "The first term on the RHS of the equation is the homogenous solution to the equation and the second term is the particular solution. If we substitue our forcing function back into the equation above and define the local concentration perturbation in terms of the localization tensor.\n",
+      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + 3 \\tilde D \\int_{V} \\int_0^t \\nabla^2 G(r,\\tau) \\bar{c}^2 \\Big (\\int_{V} \\ G(r',t) c'(x-r',0)dr' \\Big)d\\tau dr  + 3 \\tilde D \\int_{V} \\int_0^T \\nabla^2 G(r,\\tau)\\bar{c} \\Big(\\int_{V} \\ G(r',t) c'(x-r',0)dr'\\int_{V} \\ G(r'',t) c'(x-r'',0)dr''  \\Big ) d\\tau dr +...$$\n",
+      "\n",
+      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + 3 \\tilde D \\bar{c}^2 \\int_{V} \\int_0^t \\int_{V} \\nabla^2 G(r,\\tau)  \\ G(r',t) c'(x-r',0)dr' d\\tau dr  + 3 \\bar{c}\\tilde D \\int_{V} \\int_0^T\\int_{V} \\int_{V} \\nabla^2 G(r,\\tau) \\ G(r',t)  \\ G(r'',t) c'(x-r',0)c'(x-r'',0)dr'' dr' d\\tau dr +...$$\n",
+      "\n",
+      "\n",
+      "The local intial concentration can be cast in terms of a microstructure function.\n",
+      "\n",
+      "$$ c'(x,0) = c'^h m(x,0)^h $$\n",
+      "\n",
+      "Substituting this expression back into the RHS of the equation we get the following.\n",
+      "\n",
+      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'^h m(x-r,0)^h dr + 3 \\tilde D \\bar{c}^2 \\int_{V} \\int_0^t \\int_{V} \\nabla^2 G(r,\\tau)  \\ G(r',t) c'^h m(x-r',0)^hdr' d\\tau dr  + 3 \\bar{c}\\tilde D \\int_{V} \\int_0^t\\int_{V} \\int_{V} \\nabla^2 G(r,\\tau) \\ G(r',t)  \\ G(r'',t) c'^h m(x-r',0)^h c'^{h'}m(x-r'',0)^{h'} dr'' dr' d\\tau dr +...$$\n",
+      "\n",
+      "The integrals with respect to $r$ and $\\tau$ can be pulled out and evaluted.\n",
+      "\n",
+      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'^h m(x-r,0)^h dr +  I(x,t) 3 \\tilde D \\bar{c}^2 \\int_{V} G(r',t) c'^h m(x-r',0)^hdr'  + I(x,t)3 \\bar{c}\\tilde D \\int_{V} \\int_{V} \\ G(r',t)  \\ G(r'',t) c'^h m(x-r',0)^h c'^{h'}m(x-r'',0)^{h'} dr'' dr' \\Big]+...$$\n",
+      "\n",
+      "\n",
+      "where\n",
+      "\n",
+      "$$I(x,t) = 3 \\bar{c}\\tilde D \\int_{V} \\int_0^t \\nabla^2 G(r,\\tau) d\\tau dr $$\n",
+      "\n",
+      "The expression on the RHS of the equation can be grouped into coefficients as shown below.\n",
+      "\n",
+      "$$ c'(x,t) = \\int_{V} \\alpha^h(r,t) m(x-r,0)^h dr +  I(x,t) 3 \\tilde D \\bar{c}^2 \\int_{V} \\alpha^h(r',t) m(x-r',0)^hdr'  + I(x,t)3 \\bar{c}\\tilde D \\int_{V} \\int_{V} \\zeta^{hh'}(r',r'',t) m(x-r',0)^hm(x-r'',0)^{h'} dr'' dr' \\Big]+...$$\n",
+      "where\n",
+      "\n",
+      "$$ \\alpha^h(r,t) = G(r,t) c'^h $$\n",
+      "$$ \\zeta^h(r',r'',t) = \\ G(r',t)  \\ G(r'',t) c'^h c'^{h'} $$\n",
+      "\n",
+      "The discrete version of this equation is the Materials Knowledge System.\n",
       "\n"
      ]
     },
@@ -106,16 +128,18 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Perviously Formulated MKS\n",
+      "## Perviously Formulated MKS for Phase Field Models\n",
       "\n",
-      "$$ c_{s\\tau}^h = \\sum_{t=1}^T \\sum_{h=1}^H \\sum_{r=1}^S A_{rt}^h C_{(s+r)(\\tau-t)}^h $$\n",
+      "$$ c_{s\\tau}^h = \\sum_{t=1}^T \\sum_{h=1}^H \\sum_{r=1}^S A_{rt}^h c_{(s+r)(\\tau-t)}^h $$\n",
       "\n"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "it"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
