Modified MKS Derivation for Cahn-Hilliard Equation
Update the derivation for MKS from the Cahn-Hilliard Equation and format the equations to allow for easier reading.

--- a/notebooks/07 - Time MKS for Cahn-Hillard Models.ipynb
+++ b/notebooks/07 - Time MKS for Cahn-Hillard Models.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:6bdbe16f868e130855eeaf6576cee3494c934bca89939088382915c760278e2f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,11 +19,13 @@
       "Let's first assume that we are looking at a function $c(x,t)$ that represents the concentration of a phase of interest at location $x$ and and time $t$. This concentration can be set equal to a linear combination of an average concentration $\\bar{c}$ (also known as the reference medium) and a local perturbation from that average concentration $c'(x,t)$ at location $x$ and time $t$ as shown below.\n",
       "\n",
       "$$ c(x,t) = \\bar{c} + c'(x,t) $$\n",
-      "\n",
-      "The local perturbation can be related to the average concentration using a localization value $a(x,t)$.\n",
-      "\n",
-      "$$ c'(x,t) = a(x,t)\\bar{c} $$\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "####Cahn-Hilliard Equation \n",
       "\n",
       "The Cahn-Hilliard equation has the following form. \n",
@@ -35,8 +38,13 @@
       "\n",
       "where $F$ is the magnitude of the energy barrier. By substituting the fourth-order polynomial in for the free energy function and assuming that $D$, $\\gamma$ and $F$ are constants, the Cahn-Hilliard equation takes the following form.\n",
       "\n",
-      "$$ \\frac{\\partial c(x,t)}{\\partial t} = D\\nabla^2 \\Big(16 F \\big(c(x,t)^3-c(x,t)\\big)-\\gamma \\nabla^2 c(x,t) \\Big) $$\n",
-      "\n",
+      "$$ \\frac{\\partial c(x,t)}{\\partial t} = D\\nabla^2 \\Big(16 F \\big(c(x,t)^3-c(x,t)\\big)-\\gamma \\nabla^2 c(x,t) \\Big) $$\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "####Reference Medium in Cahn-Hilliard Equation\n",
       "\n",
       "Substituting in the concentration in terms of the average concentration and the local perturbation we get the following equation.\n",
@@ -64,20 +72,59 @@
       "\n",
       "$$ \\tilde D =  16 F D $$ \n",
       "\n",
-      "$$ \\tilde \\gamma = \\frac{\\gamma}{16 F} $$\n",
+      "$$ \\tilde \\gamma = \\frac{\\gamma}{16 F} $$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "####Green's Functions\n",
       "\n",
+      "A green's function is a powerful method to solve linear inhomogenous differential equation. A green's function is mathematically define as function that when operated on with a linear operator, equals a delta function. Below is an example using the Cahn-Hillarid equation.\n",
+      "\n",
+      "$$ \\frac{\\partial G(x-x',t-t')}{\\partial t} - \\tilde D\\nabla^2 \\Big(\\big(G(x-x',t-t')^3-G(x-x',t-t')\\big)-\\tilde \\gamma \\nabla^2 G(x-x',t-t') \\Big) = \\delta(x-x') \\delta(t-t') $$\n",
+      "\n",
+      "The convolution of a green's function with an inhomogenous term gives the solution to the differential equation as shown below. \n",
+      "\n",
+      "First demonstrate that the inhomogenous term can be represented an a convolution with a green's function.\n",
+      "\n",
+      "$$ \\frac{\\partial c(x,t)}{\\partial t} - \\tilde D\\nabla^2 \\Big(1\\big(c(x,t)^3-c(x,t)\\big)-\\tilde \\gamma \\nabla^2 c(x,t) \\Big) = f(x,t)$$\n",
+      "\n",
+      "\\begin{eqnarray} \\int_V \\int_0^t \\frac{\\partial G(x-x',t-t')}{\\partial t} - \\tilde D\\nabla^2 \\Big(1\\big(G(x-x',t-t')^3-G(x,t)\\big)-\\tilde \\gamma \\nabla^2 G(x-x',&&t-t') \\Big) f(x',t') dx'dt'= \\\\\n",
+      "  &&\\int_V \\int_0^t \\delta(x-x') \\delta(t-t') f(x',t') dx'dt' = f(x,t) \\end{eqnarray}\n",
+      "\n",
+      "This new definition can be put back into the inhomogenous differential equation above. \n",
+      "\n",
+      "\\begin{eqnarray} \n",
+      "\\frac{\\partial c(x,t)}{\\partial t} - \\tilde D \\nabla^2 \\Big(1\\big(c(x,t)^3-c(x,t)\\big)-\\tilde \\gamma \\nabla^2 c(x,t) \\Big) && = \\\\\n",
+      " \\int_V \\int_0^t \\frac{\\partial G(x-x',t-t')}{\\partial t} && - \\tilde D \\nabla^2 \\Big( \\big(G(x-x',t-t')^3-G(x,t)\\big)-\\tilde \\gamma \\nabla^2 G(x-x',t-t') \\Big) f(x',t') dx'dt'\n",
+      " \\end{eqnarray}\n",
+      "\n",
+      "Because the Cahn-Hillard equation operates on $x$ and $t$, it can be pulled out of the integral on the RHS of the equation, and the concentration $c$ can be equated to the convolution on the right hand side.\n",
+      "\n",
+      "\n",
+      "\n",
+      "$$ c(x,t) = \\int_V \\int_0^t G(x-x',t-t') f(x',t') dx'dt' $$\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "####Green's Functions and Materials Knowledge System\n",
       "\n",
       "The solution to the equation above can be found in terms of a green's function. The general solution for the concentration $c(x,t)$ has the following form.\n",
       "\n",
       "$$ c'(x,t) = \\int_{V} \\ G(x-x',t) c'(x',0)dx' + \\int_{V} \\int_0^t G(x-x',t-t') f(x',t') dt' dx' $$\n",
       "\n",
-      "$$ c'(x,t) = \\int_{V} \\ G(x-x',t) c'(x',0)dx' + 3 \\tilde D \\int_{V} \\int_0^t G(x-x',t-t')  \\nabla^2 \\Big ( \\bar{c}^2 c'(x',t') + \\bar{c} c'(x',t')^2 \\Big) dt' dx' $$\n",
+      "$$ c'(x,t) = \\int_{V} \\ G(x-x',t) c'(x',0)dx' + 3 \\tilde D \\int_{V} \\int_0^t G(x-x',t-t')  \\nabla_{x'}^2 \\Big ( \\bar{c}^2 c'(x',t') + \\bar{c} c'(x',t')^2 \\Big) dt' dx' $$\n",
       "\n",
       "\n",
       "The first term on the RHS of the equation is the homogenous solution to the equation and the second term is the particular solution. If we assume periodic boundary conditions and integrate by parts twice on the last term, we can get the following expression.\n",
       "\n",
-      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + 3 \\tilde D \\int_{V} \\int_0^t \\nabla^2 G(r,\\tau) \\Big ( \\bar{c}^2 c'(x-r,t-\\tau) + \\bar{c} c'(x-r,t-\\tau)^2 \\Big) d\\tau dr $$\n",
+      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + 3 \\tilde D \\int_{V} \\int_0^t \\nabla_{r}^2 G(r,\\tau) \\bar{c}^2 c'(x-r,t-\\tau)d\\tau dr  + 3 \\tilde D \\int_{V} \\int_0^T \\nabla_{r}^2 G(r,\\tau)\\bar{c} c'(x-r,t-\\tau)^2 d\\tau dr $$\n",
+      "\n",
       "\n",
       "where\n",
       "\n",
@@ -85,14 +132,14 @@
       "\n",
       "$$\\tau = t-t' $$\n",
       "\n",
+      "Notice that in the equation above we have $c(x,t)$ on both the right and left hand sides. \n",
       "\n",
       "\n",
-      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + 3 \\tilde D \\int_{V} \\int_0^t \\nabla^2 G(r,\\tau) \\bar{c}^2 c'(x-r,t-\\tau)d\\tau dr  + 3 \\tilde D \\int_{V} \\int_0^T \\nabla^2 G(r,\\tau)\\bar{c} c'(x-r,t-\\tau)^2 d\\tau dr $$\n",
+      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + &3& \\tilde D \\int_{V} \\int_0^t \\nabla_{r}^2 G(r,\\tau) \\bar{c}^2 \\Big (\\int_{V} \\ G(r',t) c'(x-r',0)dr' \\Big)d\\tau dr \\nonumber + \\\\ &3& \\tilde D \\int_{V} \\int_0^T \\nabla_{r}^2 G(r,\\tau)\\bar{c} \\Big(\\int_{V} \\ G(r',t) c'(x-r',0)dr'\\int_{V} \\ G(r'',t) c'(x-r'',0)dr''  \\Big ) d\\tau dr +...\\end{eqnarray}\n",
       "\n",
+      "or\n",
       "\n",
-      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + 3 \\tilde D \\int_{V} \\int_0^t \\nabla^2 G(r,\\tau) \\bar{c}^2 \\Big (\\int_{V} \\ G(r',t) c'(x-r',0)dr' \\Big)d\\tau dr  + 3 \\tilde D \\int_{V} \\int_0^T \\nabla^2 G(r,\\tau)\\bar{c} \\Big(\\int_{V} \\ G(r',t) c'(x-r',0)dr'\\int_{V} \\ G(r'',t) c'(x-r'',0)dr''  \\Big ) d\\tau dr +...$$\n",
-      "\n",
-      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + 3 \\tilde D \\bar{c}^2 \\int_{V} \\int_0^t \\int_{V} \\nabla^2 G(r,\\tau)  \\ G(r',t) c'(x-r',0)dr' d\\tau dr  + 3 \\bar{c}\\tilde D \\int_{V} \\int_0^T\\int_{V} \\int_{V} \\nabla^2 G(r,\\tau) \\ G(r',t)  \\ G(r'',t) c'(x-r',0)c'(x-r'',0)dr'' dr' d\\tau dr +...$$\n",
+      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + &3& \\tilde D \\bar{c}^2 \\int_{V} \\int_0^t \\int_{V} \\nabla_{r}^2 G(r,\\tau)  \\ G(r',t) c'(x-r',0)dr' d\\tau dr + \\\\ &3& \\bar{c}\\tilde D \\int_{V} \\int_0^T\\int_{V} \\int_{V} \\nabla_{r}^2 G(r,\\tau) \\ G(r',t)  \\ G(r'',t) c'(x-r',0)c'(x-r'',0)dr'' dr' d\\tau dr +...\\end{eqnarray}\n",
       "\n",
       "\n",
       "The local intial concentration can be cast in terms of a microstructure function.\n",
@@ -101,11 +148,11 @@
       "\n",
       "Substituting this expression back into the RHS of the equation we get the following.\n",
       "\n",
-      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'^h m(x-r,0)^h dr + 3 \\tilde D \\bar{c}^2 \\int_{V} \\int_0^t \\int_{V} \\nabla^2 G(r,\\tau)  \\ G(r',t) c'^h m(x-r',0)^hdr' d\\tau dr  + 3 \\bar{c}\\tilde D \\int_{V} \\int_0^t\\int_{V} \\int_{V} \\nabla^2 G(r,\\tau) \\ G(r',t)  \\ G(r'',t) c'^h m(x-r',0)^h c'^{h'}m(x-r'',0)^{h'} dr'' dr' d\\tau dr +...$$\n",
+      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'^h m(x-r,0)^h dr + &3& \\tilde D \\bar{c}^2 \\int_{V} \\int_0^t \\int_{V} \\nabla_{r}^2 G(r,\\tau)  \\ G(r',t) c'^h m(x-r',0)^hdr' d\\tau dr  + \\\\ &3& \\bar{c}\\tilde D \\int_{V} \\int_0^t\\int_{V} \\int_{V} \\nabla_{r}^2 G(r,\\tau) \\ G(r',t)  \\ G(r'',t) c'^h m(x-r',0)^h c'^{h'}m(x-r'',0)^{h'} dr'' dr' d\\tau dr +...\\end{eqnarray}\n",
       "\n",
       "The integrals with respect to $r$ and $\\tau$ can be pulled out and evaluted.\n",
       "\n",
-      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'^h m(x-r,0)^h dr +  I(x,t) 3 \\tilde D \\bar{c}^2 \\int_{V} G(r',t) c'^h m(x-r',0)^hdr'  + I(x,t)3 \\bar{c}\\tilde D \\int_{V} \\int_{V} \\ G(r',t)  \\ G(r'',t) c'^h m(x-r',0)^h c'^{h'}m(x-r'',0)^{h'} dr'' dr' \\Big]+...$$\n",
+      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'^h m(x-r,0)^h dr +  &I(x,t)&\\int_{V} G(r',t) c'^h m(x-r',0)^hdr' + \\\\ &I(x,t)& \\int_{V} \\int_{V} \\ G(r',t)  \\ G(r'',t) c'^h m(x-r',0)^h c'^{h'}m(x-r'',0)^{h'} dr'' dr' \\Big]+...\\end{eqnarray}\n",
       "\n",
       "\n",
       "where\n",
@@ -114,32 +161,22 @@
       "\n",
       "The expression on the RHS of the equation can be grouped into coefficients as shown below.\n",
       "\n",
-      "$$ c'(x,t) = \\int_{V} \\alpha^h(r,t) m(x-r,0)^h dr +  I(x,t) 3 \\tilde D \\bar{c}^2 \\int_{V} \\alpha^h(r',t) m(x-r',0)^hdr'  + I(x,t)3 \\bar{c}\\tilde D \\int_{V} \\int_{V} \\zeta^{hh'}(r',r'',t) m(x-r',0)^hm(x-r'',0)^{h'} dr'' dr' \\Big]+...$$\n",
+      "$$ c'(x,t) = \\int_{V} \\alpha^h(r,t) m(x-r,0)^h dr +  \\int_{V} \\eta^h(r',t) m(x-r',0)^hdr'  + \\int_{V} \\int_{V} \\zeta^{hh'}(r',r'',t) m(x-r',0)^hm(x-r'',0)^{h'} dr'' dr' \\Big]+...$$\n",
       "where\n",
       "\n",
       "$$ \\alpha^h(r,t) = G(r,t) c'^h $$\n",
-      "$$ \\zeta^h(r',r'',t) = \\ G(r',t)  \\ G(r'',t) c'^h c'^{h'} $$\n",
+      "$$ \\eta^h(r',t) = I(x,t) G(r',t) c'^h $$\n",
+      "$$ \\zeta^h(r',r'',t) = I(x,t) G(r',t)  G(r'',t) c'^h c'^{h'} $$\n",
       "\n",
-      "The discrete version of this equation is the Materials Knowledge System.\n",
-      "\n"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "## Perviously Formulated MKS for Phase Field Models\n",
+      "The discrete version of this equation is the Materials Knowledge System.The first order terms in the MKS would take the following form.\n",
       "\n",
-      "$$ c_{s\\tau}^h = \\sum_{t=1}^T \\sum_{h=1}^H \\sum_{r=1}^S A_{rt}^h c_{(s+r)(\\tau-t)}^h $$\n",
-      "\n"
+      "$$ c_{st} = \\sum_{r=1}^S \\alpha_{rt}^h m_{(s-r)(0)}^h+\\sum_{r=1}^S \\eta^h_{rt} m_{(s-r)(0)} +  \\sum_{r=1}^S\\sum_{r'=1}^S \\zeta_{rr't}^{hh'} m_{(s-r)(0)}^h m_{(s-r')(0)}^{h'} +... $$\n"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "it"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
