Add Equation Numbers
Add equation numbers as references.

--- a/notebooks/07 - Time MKS for Cahn-Hillard Models.ipynb
+++ b/notebooks/07 - Time MKS for Cahn-Hillard Models.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6bdbe16f868e130855eeaf6576cee3494c934bca89939088382915c760278e2f"
+  "signature": "sha256:8cd4e77fa419c787a44708778be7df3af580f09cb71028d10defed6103b6e1e6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -58,7 +58,7 @@
       "\n",
       "Because $\\bar{c}$ is a constant, the equation reduces to the following form.\n",
       "\n",
-      "$$ \\frac{\\partial c'(x,t)}{\\partial t} = D\\Big(16 F [3\\bar{c}^2\\nabla^2c'(x,t) +3\\bar{c}\\nabla^2c'(x,t)^2  + \\nabla^2 c'(x,t)^3- \\nabla^2 c'(x,t)]-\\gamma\\nabla^4c'(x,t) \\Big) $$\n",
+      "\\begin{eqnarray} \\frac{\\partial c'(x,t)}{\\partial t} = D\\Big(16 F [3\\bar{c}^2\\nabla^2c'(x,t) +3\\bar{c}\\nabla^2c'(x,t)^2  + \\nabla^2 c'(x,t)^3- \\nabla^2 c'(x,t)]-\\gamma\\nabla^4c'(x,t) \\Big) &&&&&&&&&&&&&&&&&&&&& (1)\\\\ \\end{eqnarray}\n",
       "\n",
       "This can be rearranged to looks like the nonhomogeneous Cahn-Hilliard equation.\n",
       "\n",
@@ -101,7 +101,7 @@
       " \\int_V \\int_0^t \\frac{\\partial G(x-x',t-t')}{\\partial t} && - \\tilde D \\nabla^2 \\Big( \\big(G(x-x',t-t')^3-G(x,t)\\big)-\\tilde \\gamma \\nabla^2 G(x-x',t-t') \\Big) f(x',t') dx'dt'\n",
       " \\end{eqnarray}\n",
       "\n",
-      "Because the Cahn-Hillard equation operates on $x$ and $t$, it can be pulled out of the integral on the RHS of the equation, and the concentration $c$ can be equated to the convolution on the right hand side.\n",
+      "Because the Cahn-Hillard equation operates on $x$ and $t$, it can be pulled out of the integral on the right hand side of the equation, and the concentration $c$ can be equated to the convolution on the right hand side.\n",
       "\n",
       "\n",
       "\n",
@@ -118,12 +118,12 @@
       "\n",
       "$$ c'(x,t) = \\int_{V} \\ G(x-x',t) c'(x',0)dx' + \\int_{V} \\int_0^t G(x-x',t-t') f(x',t') dt' dx' $$\n",
       "\n",
-      "$$ c'(x,t) = \\int_{V} \\ G(x-x',t) c'(x',0)dx' + 3 \\tilde D \\int_{V} \\int_0^t G(x-x',t-t')  \\nabla_{x'}^2 \\Big ( \\bar{c}^2 c'(x',t') + \\bar{c} c'(x',t')^2 \\Big) dt' dx' $$\n",
+      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(x-x',t) c'(x',0)dx' + 3 \\tilde D \\int_{V} \\int_0^t G(x-x',t-t')  \\nabla_{x'}^2 \\Big ( \\bar{c}^2 c'(x',t') + \\bar{c} c'(x',t')^2 \\Big) dt' dx' &&&&&&&&&&&&& (2) \\end{eqnarray}\n",
       "\n",
       "\n",
-      "The first term on the RHS of the equation is the homogenous solution to the equation and the second term is the particular solution. If we assume periodic boundary conditions and integrate by parts twice on the last term, we can get the following expression.\n",
+      "The first term on the right hand side of the equation is the homogenous solution to the equation and the second term is the particular solution. If we assume periodic boundary conditions and integrate by parts twice on the last term, we can get the following expression.\n",
       "\n",
-      "$$ c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + 3 \\tilde D \\int_{V} \\int_0^t \\nabla_{r}^2 G(r,\\tau) \\bar{c}^2 c'(x-r,t-\\tau)d\\tau dr  + 3 \\tilde D \\int_{V} \\int_0^T \\nabla_{r}^2 G(r,\\tau)\\bar{c} c'(x-r,t-\\tau)^2 d\\tau dr $$\n",
+      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + 3 \\tilde D \\int_{V} \\int_0^t \\nabla_{r}^2 G(r,\\tau) \\bar{c}^2 c'(x-r,t-\\tau)d\\tau dr  + 3 \\tilde D \\int_{V} \\int_0^T \\nabla_{r}^2 G(r,\\tau)\\bar{c} c'(x-r,t-\\tau)^2 d\\tau dr &&&&&&&&& (3)\\end{eqnarray}\n",
       "\n",
       "\n",
       "where\n",
@@ -132,14 +132,14 @@
       "\n",
       "$$\\tau = t-t' $$\n",
       "\n",
-      "Notice that in the equation above we have $c(x,t)$ on both the right and left hand sides. \n",
+      "Notice that in the equation above we have $c(x,t)$ on both the right and left hand sides. By subsituting the definiation of $c(x,t)$ on the right hand side of the equation into the $c(x,t)$ on the right hand side the equation becomes a series.\n",
       "\n",
       "\n",
       "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + &3& \\tilde D \\int_{V} \\int_0^t \\nabla_{r}^2 G(r,\\tau) \\bar{c}^2 \\Big (\\int_{V} \\ G(r',t) c'(x-r',0)dr' \\Big)d\\tau dr \\nonumber + \\\\ &3& \\tilde D \\int_{V} \\int_0^T \\nabla_{r}^2 G(r,\\tau)\\bar{c} \\Big(\\int_{V} \\ G(r',t) c'(x-r',0)dr'\\int_{V} \\ G(r'',t) c'(x-r'',0)dr''  \\Big ) d\\tau dr +...\\end{eqnarray}\n",
       "\n",
       "or\n",
       "\n",
-      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + &3& \\tilde D \\bar{c}^2 \\int_{V} \\int_0^t \\int_{V} \\nabla_{r}^2 G(r,\\tau)  \\ G(r',t) c'(x-r',0)dr' d\\tau dr + \\\\ &3& \\bar{c}\\tilde D \\int_{V} \\int_0^T\\int_{V} \\int_{V} \\nabla_{r}^2 G(r,\\tau) \\ G(r',t)  \\ G(r'',t) c'(x-r',0)c'(x-r'',0)dr'' dr' d\\tau dr +...\\end{eqnarray}\n",
+      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'(x-r,0)dr + &3& \\tilde D \\bar{c}^2 \\int_{V} \\int_0^t \\int_{V} \\nabla_{r}^2 G(r,\\tau)  \\ G(r',t) c'(x-r',0)dr' d\\tau dr + \\\\ &3& \\bar{c}\\tilde D \\int_{V} \\int_0^T\\int_{V} \\int_{V} \\nabla_{r}^2 G(r,\\tau) \\ G(r',t)  \\ G(r'',t) c'(x-r',0)c'(x-r'',0)dr'' dr' d\\tau dr +...&&&&&&& (4)\\end{eqnarray}\n",
       "\n",
       "\n",
       "The local intial concentration can be cast in terms of a microstructure function.\n",
@@ -148,11 +148,11 @@
       "\n",
       "Substituting this expression back into the RHS of the equation we get the following.\n",
       "\n",
-      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'^h m(x-r,0)^h dr + &3& \\tilde D \\bar{c}^2 \\int_{V} \\int_0^t \\int_{V} \\nabla_{r}^2 G(r,\\tau)  \\ G(r',t) c'^h m(x-r',0)^hdr' d\\tau dr  + \\\\ &3& \\bar{c}\\tilde D \\int_{V} \\int_0^t\\int_{V} \\int_{V} \\nabla_{r}^2 G(r,\\tau) \\ G(r',t)  \\ G(r'',t) c'^h m(x-r',0)^h c'^{h'}m(x-r'',0)^{h'} dr'' dr' d\\tau dr +...\\end{eqnarray}\n",
+      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'^h m(x-r,0)^h dr + &3& \\tilde D \\bar{c}^2 \\int_{V} \\int_0^t \\int_{V} \\nabla_{r}^2 G(r,\\tau)  \\ G(r',t) c'^h m(x-r',0)^hdr' d\\tau dr  + \\\\ &3& \\bar{c}\\tilde D \\int_{V} \\int_0^t\\int_{V} \\int_{V} \\nabla_{r}^2 G(r,\\tau) \\ G(r',t)  \\ G(r'',t) c'^h m(x-r',0)^h c'^{h'}m(x-r'',0)^{h'} dr'' dr' d\\tau dr +...&&&&&&&&& (5)\\end{eqnarray}\n",
       "\n",
       "The integrals with respect to $r$ and $\\tau$ can be pulled out and evaluted.\n",
       "\n",
-      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'^h m(x-r,0)^h dr +  &I(x,t)&\\int_{V} G(r',t) c'^h m(x-r',0)^hdr' + \\\\ &I(x,t)& \\int_{V} \\int_{V} \\ G(r',t)  \\ G(r'',t) c'^h m(x-r',0)^h c'^{h'}m(x-r'',0)^{h'} dr'' dr' \\Big]+...\\end{eqnarray}\n",
+      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\ G(r,t) c'^h m(x-r,0)^h dr +  &I(x,t)&\\int_{V} G(r',t) c'^h m(x-r',0)^hdr' + \\\\ &I(x,t)& \\int_{V} \\int_{V} \\ G(r',t)  \\ G(r'',t) c'^h m(x-r',0)^h c'^{h'}m(x-r'',0)^{h'} dr'' dr' \\Big]+...&&&&&&&&&&& (6)\\end{eqnarray}\n",
       "\n",
       "\n",
       "where\n",
@@ -161,16 +161,15 @@
       "\n",
       "The expression on the RHS of the equation can be grouped into coefficients as shown below.\n",
       "\n",
-      "$$ c'(x,t) = \\int_{V} \\alpha^h(r,t) m(x-r,0)^h dr +  \\int_{V} \\eta^h(r',t) m(x-r',0)^hdr'  + \\int_{V} \\int_{V} \\zeta^{hh'}(r',r'',t) m(x-r',0)^hm(x-r'',0)^{h'} dr'' dr' \\Big]+...$$\n",
+      "\\begin{eqnarray} c'(x,t) = \\int_{V} \\alpha^h(r,t) m(x-r,0)^h dr  + \\int_{V} \\int_{V} \\zeta^{hh'}(r',r'',t) m(x-r',0)^hm(x-r'',0)^{h'} dr'' dr' \\Big]+...&&&&&&&&&&&& (7) \\end{eqnarray}\n",
       "where\n",
       "\n",
-      "$$ \\alpha^h(r,t) = G(r,t) c'^h $$\n",
-      "$$ \\eta^h(r',t) = I(x,t) G(r',t) c'^h $$\n",
+      "$$ \\alpha^h(r,t) = G(r,t) c'^h \\big(1 + I(x,t) \\big)$$\n",
       "$$ \\zeta^h(r',r'',t) = I(x,t) G(r',t)  G(r'',t) c'^h c'^{h'} $$\n",
       "\n",
       "The discrete version of this equation is the Materials Knowledge System.The first order terms in the MKS would take the following form.\n",
       "\n",
-      "$$ c_{st} = \\sum_{r=1}^S \\alpha_{rt}^h m_{(s-r)(0)}^h+\\sum_{r=1}^S \\eta^h_{rt} m_{(s-r)(0)} +  \\sum_{r=1}^S\\sum_{r'=1}^S \\zeta_{rr't}^{hh'} m_{(s-r)(0)}^h m_{(s-r')(0)}^{h'} +... $$\n"
+      "\\begin{eqnarray} c_{st} = \\sum_{r=1}^S \\alpha_{rt}^h m_{(s-r)(0)}^h+ \\sum_{r=1}^S\\sum_{r'=1}^S \\zeta_{rr't}^{hh'} m_{(s-r)(0)}^h m_{(s-r')(0)}^{h'} +...&&&&&&&&&& (8)\\end{eqnarray}\n"
      ]
     },
     {
