Update Cahn-Hilliard Derivation and add Linear Viscoelasticity

--- a/notebooks/Cahn-Hillard Equation and Diffusion.ipynb
+++ b/notebooks/Cahn-Hillard Equation and Diffusion.ipynb
@@ -12,7 +12,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##MKS for The Cahn-Hilliard Equation\n",
+      "##The Cahn-Hilliard Equation \n",
       "\n",
       "####Reference Medium \n",
       "\n",
@@ -115,9 +115,9 @@
       "\n",
       "$$ \\phi' =  \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$\n",
       "\n",
-      "Finally the initial conditions are inhomogenous, an additional term can be added to provide that information.\n",
+      "If the initial conditions are inhomogenous, an additional term can be added to provide that information.\n",
       "\n",
-      "$$ \\phi' =  \\int_V G(x - x',t - t') \\phi(x', 0) dx' + \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$\n"
+      "$$ \\phi' =  \\int_V G(x - x',t) \\phi(x', 0) dx' + \\int_0^t \\int_V G(x - x',t - t') f(x',t') dx' dt' $$\n"
      ]
     },
     {
@@ -183,33 +183,33 @@
       "\\begin{eqnarray} \\phi'(x, t) = && \\int_V A(x - x',t) \n",
       "\\phi(x', 0) dx'\n",
       "+ \\\\&& \\int_V \\int_0^t B(x - x', t - t') \\Bigg [\n",
-      "\\Bigg ( \\int_V A(x - x'',t) \n",
+      "\\Bigg ( \\int_V A(x' - x'',t) \n",
       "\\phi(x'', 0) dx''\n",
-      "+ \\int_V \\int_0^t B(x - x'', t - t'') \n",
+      "+ \\int_V \\int_0^t B(x' - x'', t' - t'') \n",
       "\\phi'(x'', t'') \n",
-      "dx'' dt'' - \\int_V \\int_0^t  C(x - x'', t - t'')  \n",
+      "dx'' dt'' - \\int_V \\int_0^t  C(x' - x'', t' - t'')  \n",
       "\\phi'(x'', t'')^2 \n",
-      "dx'' dt'' - \\int_V \\int_0^t  E(x - x'',t - t'') \n",
+      "dx'' dt'' - \\int_V \\int_0^t  E(x' - x'',t' - t'') \n",
       "\\phi'(x'', t'')^3 \n",
       "dx'' dt'' \\Bigg )\n",
       "\\Bigg ]dx' dt' - \\\\&& \\int_V \\int_0^t  C(x - x', t - t') \\Bigg [  \n",
-      "\\Bigg ( \\int_V A(x - x'',t) \n",
+      "\\Bigg ( \\int_V A(x' - x'',t) \n",
       "\\phi(x'', 0) dx''\n",
-      "+  \\int_V \\int_0^t B(x - x'', t - t'') \n",
+      "+  \\int_V \\int_0^t B(x' - x'', t' - t'') \n",
       "\\phi'(x'', t'') \n",
-      "dx'' dt'' - \\int_V \\int_0^t  C(x - x'', t - t'')  \n",
+      "dx'' dt'' - \\int_V \\int_0^t  C(x' - x'', t' - t'')  \n",
       "\\phi'(x'', t'')^2 \n",
-      "dx'' dt'' - \\int_V \\int_0^t  E(x - x'',t - t'') \n",
+      "dx'' dt'' - \\int_V \\int_0^t  E(x' - x'',t' - t'') \n",
       "\\phi'(x'', t'')^3 \n",
       "dx'' dt'' \\Bigg )^2\n",
       "\\Bigg ]dx' dt' - \\\\ && \\int_V \\int_0^t  E(x - x',t - t')  \\Bigg [\n",
-      "\\Bigg (\\int_V A(x - x'',t) \n",
+      "\\Bigg (\\int_V A(x' - x'',t) \n",
       "\\phi(x'', 0) dx''\n",
-      "+  \\int_V \\int_0^t B(x - x'', t - t'') \n",
+      "+  \\int_V \\int_0^t B(x' - x'', t' - t'') \n",
       "\\phi'(x'', t'') \n",
-      "dx'' dt'' - \\int_V \\int_0^t  C(x - x'', t - t'')  \n",
+      "dx'' dt'' - \\int_V \\int_0^t  C(x' - x'', t' - t'')  \n",
       "\\phi'(x'', t'')^2 \n",
-      "dx'' dt'' - \\int_V \\int_0^t  E(x - x'',t - t'') \n",
+      "dx'' dt'' - \\int_V \\int_0^t  E(x' - x'',t' - t'') \n",
       "\\phi'(x'', t'')^3 \n",
       "dx'' dt'' \\Bigg )^3\n",
       "\\Bigg ] dx' dt' +... \\end{eqnarray}\n",
@@ -223,19 +223,20 @@
      "source": [
       "\\begin{eqnarray} \\phi'(x, t) = && \\int_V A(x - x',t) \n",
       "\\phi(x', 0) dx'\n",
-      "+ \\Bigg (\n",
-      "\\int_VA(x - x'',t) \n",
+      "+ \\int_0^t \\int_V \\Bigg (\n",
+      "\\int_VA(x' - x'',t) \n",
       "\\phi(x'', 0) dx''\\Bigg )\n",
-      "\\int_0^t \\int_V  B(x - x', t - t')  dx' dt' - \\\\&&\n",
-      "\\Bigg ( \\int_V A(x - x'',t) \n",
+      " B(x - x', t - t')  dx' dt' - \\\\&&\n",
+      "\\int_0^t \\int_V \\Bigg ( \\int_V A(x' - x'',t) \n",
       "\\phi(x'', 0) dx''\n",
       "\\Bigg )^2\n",
-      "\\int_0^t \\int_V  C(x - x', t - t') \n",
+      "C(x - x', t - t') \n",
       "dx' dt' - \n",
-      "\\Bigg (\\int_V A(x - x'',t) \n",
+      "\\int_0^t  \\int_V\n",
+      "\\Bigg (\\int_V A(x' - x'',t) \n",
       "\\phi(x'', 0) dx'' \n",
       " \\Bigg )^3\n",
-      "\\int_0^t  \\int_V  E(x - x',t - t') \n",
+      "  E(x - x',t - t') \n",
       "dx' dt' + ...\\end{eqnarray}"
      ]
     },
@@ -246,19 +247,19 @@
       "\\begin{eqnarray}| \\phi'(x, t) = && \\int_V A(x - x',t) \n",
       "\\phi(x', 0) dx'\n",
       "+ \\int_0^t \\int_V  \\int_V  B(x - x', t - t') \n",
-      "A(x - x'',t) \n",
+      "A(x' - x'',t) \n",
       "\\phi(x'', 0) dx'' dx' dt' - \\\\&&\n",
       "\\int_0^t \\int_V  \\int_V \\int_V C(x - x', t - t')   \n",
-      "A(x - x'',t) \n",
+      "A(x' - x'',t) \n",
       "\\phi(x'', 0) \n",
-      "A(x - x''',t) \n",
+      "A(x' - x''',t) \n",
       "\\phi(x''', 0)dx''' dx''  dx' dt' - \\\\&&\n",
       "\\int_0^t \\int_V  \\int_V \\int_V \\int_V E(x - x',t - t')  \n",
-      " A(x - x'',t) \n",
+      " A(x' - x'',t) \n",
       "\\phi(x'', 0)  \n",
-      "A(x - x''',t) \n",
+      "A(x' - x''',t) \n",
       "\\phi(x''', 0) \n",
-      "A(x - x'''',t) \n",
+      "A(x' - x'''',t) \n",
       "\\phi(x'''', 0) dx'''' dx''' dx'' dx' dt' + ...\\end{eqnarray}\n"
      ]
     },
@@ -303,19 +304,19 @@
       "\\phi(x', 0) dx'\n",
       "+ \\int_0^t \\int_V  \\int_V  \n",
       "D \\Big[\\nabla_x^4 G(x - x',t - t')   \\epsilon^2 - 3 a^2 \\bar{\\phi}^2 \\nabla_x^2 G(x - x',t - t') \\Big ] \n",
-      "G(x - x'',t) \n",
+      "G(x' - x'',t) \n",
       "\\phi(x'', 0) dx'' dx' dt' - \\\\&&\n",
       "\\int_0^t \\int_V  \\int_V \\int_V \n",
       "3 D \\bar{\\phi} a^2 \\nabla_x^2 G(x - x',t - t')   \n",
-      "G(x - x'',t) \n",
-      "G(x - x''',t)\n",
+      "G(x' - x'',t) \n",
+      "G(x' - x''',t)\n",
       "\\phi(x'', 0)\n",
       "\\phi(x''', 0)dx''' dx''  dx' dt' - \\\\&&\n",
       "\\int_0^t \\int_V  \\int_V \\int_V \\int_V \n",
       "D  a^2 \\nabla_x^2 G(x - x',t - t')  \n",
-      "G(x - x'',t) \n",
-      "G(x - x''',t) \n",
-      "G(x - x'''',t)\n",
+      "G(x' - x'',t) \n",
+      "G(x' - x''',t) \n",
+      "G(x' - x'''',t)\n",
       "\\phi(x'', 0)\n",
       "\\phi(x''', 0) \n",
       "\\phi(x'''', 0) dx'''' dx''' dx'' dx' dt' + ...\\end{eqnarray}"
